//
// Copyright 2021 DXOS.org
//

syntax = "proto3";

package dxos.protocol.presence;
 
// Even though those defintions don't use Any the schema can be added dynamically later.
// Import Any so that the protobuf compiler is happy that there's a substitution.
import "google/protobuf/any.proto";

message Alive {
  message Connection {
    bytes peerId = 1;
    optional bool initiator = 2;
  }

  bytes peerId = 1;
  repeated Connection connections = 2;
  optional bytes metadata = 3;
}
